<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="2"
        app:rowCount="9">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/country"
            android:textSize="10dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Spinner
            android:id="@+id/countriesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/chosen_date"
            android:textSize="10dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/chosenDatetimeTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textStyle="bold"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/getCurrentDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minWidth="10dp"
            android:onClick="getCurrentDateButtonCallback"
            android:text="@string/get_ncurrent_ndate"
            android:textSize="10dp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1">

            <Button
                android:id="@+id/setDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:minWidth="10dp"
                android:onClick="setDateButtonCallback"
                android:text="@string/set_na_ndate"
                android:textSize="10dp" />

            <Button
                android:id="@+id/setTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:minWidth="10dp"
                android:onClick="setTimeButtonCallback"
                android:text="@string/set_na_ntime"
                android:textSize="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/getFriendlyDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:minWidth="10dp"
            android:onClick="getFriendlyDateButtonCallback"
            android:text="@string/get_friendly_date"
            android:textSize="10dp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/http_response"
            android:textSize="10dp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="#00BBD3"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="20">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/httpResponseTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/friendly_date"
            android:textSize="10dp"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/friendlyDatetimeTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#4CAF50"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="5" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>